# z80-simulador

./: .gitignore  CMakeLists.txt  README.md  imgui.ini  modA.asm  modB.asm  proc.asm  test.asm
include/glad/: glad.h
src/: glad.c  main.cpp  utils.cpp  utils.h  vm.cpp
src/assembler/: assembler.cpp  assembler.h  main.cpp  test.asm  test2.asm
src/cpu/: cpu.cpp  cpu.h  registers.h
src/gui/: gui.cpp  gui.h
src/instructions/: instruction_set.cpp  instruction_set.h
src/linker/: linker.cpp  linker.h  main.cpp  modules.json
src/macro/: macro.cpp  macro.h  macro_context.h  macro_processor.cpp  macro_processor.h  main.cpp  main_test.cpp  pass_one.cpp  pass_one.h  pass_two.cpp  pass_two.h  test.asm  test_1.asm  test_preprocessed.asm  utils.cpp  utils.h
src/memory/: memory.cpp  memory.h
src/z80/cpu/: cpu.cpp  cpu.h  registers.cpp  registers.h
src/z80/gui/: gui.cpp  gui.h  log.cpp
src/z80/instructions/: instruction_set.cpp  instruction_set.h
src/z80/memory/: memory.cpp  memory.h
